test/tests/stages/9_functions/invalid_parse/var_init_in_param_list.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(bad_params)
  (
  int
  identifier(a)
  =
  const int(3)
  )
  {
  return
  const int(1)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
